# backend

./: .coverage  .gitignore  Project Rules.md  README.md  conftest.py  coverage.xml  db.sqlite3.backup  db.sqlite3.backup2  django-conversion.md  django.sh  ehab.txt  manage.py  project-management-requirements.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py  task message copy.txt  task message.txt
.cursor/rules/: api.mdc  server.mdc
API/: settings.py
Apps/: __init__.py  manage.py  pytest.ini
Apps/automation/: __init__.py  apps.py  engine.py  handlers.py  models.py  serializers.py  tasks.py  urls.py  views.py
Apps/communication/: __init__.py  consumers.py  exceptions.py  models.py  rich_text.py  routing.py  serializers.py  urls.py  views.py
Apps/contact/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Apps/contacts/: admin.py  apps.py  cache_manager.py  models.py  serializers.py  urls.py  views.py
Apps/core/: __init__.py  asgi.py  (+8 more)
Core/: asgi.py  celery.py  settings.py  settings_test.py  test_settings.py  urls.py
core/: settings.py  urls.py
docs/: API_TESTING.md  CACHING_STRATEGY.md  IMPLEMENTATION_PRIORITY.md  ORGANIZATION_STRUCTURE_ENHANCEMENTS.md  PROJECT_GUIDE.md  RBAC_ENHANCEMENTS.md  README.md  TESTING_GUIDE.md  api_endpoints.md  development.md  postman_collection.json  project_app.md  rbac_api.md  rbac_integration.md  time_management_api.md  time_management_business_logic.md
scripts/: DEPLOYMENT.md  deploy.sh  deploy_test.sh  django.sh  manage_celery.sh  manage_migrations.sh  reset_db.sh  restart_server.sh
(+441 files in other folders)
